# agentbrowser

./: .gitignore  LICENSE  README.md  pyproject.toml  smoke_test.py
.github/workflows/: ci.yml
agentbrowser/: __init__.py  actions.py  agent.py  browser.py  cli.py  config.py  elements.py  exceptions.py  extraction.py  forms.py  page_state.py  profiles.py  recorder.py  screenshot.py  stealth.py  storage.py
examples/: fill_form.py  linkedin_post.py  login_github.py  scrape_hn.py
tests/: test_agent.py  test_elements.py  test_extraction.py  test_forms.py
